@ekynoxe - Making images their own aspect ratio on scenes, not caring about cropping them anymore. Also fixing interview images after the code change.

--- a/src/sass/_interviews.scss
+++ b/src/sass/_interviews.scss
@@ -23,13 +23,10 @@
 }
 
 .interview__interviewee {
+	border-radius: 35px;
 	float: left;
 	margin-right: 20px;
-
-	.image {
-		border-radius: 35px;
-		width: 70px;
-	}
+	width: 70px;
 }
 
 .interview__quote {
