--- a/src/sass/_scenes.scss
+++ b/src/sass/_scenes.scss
@@ -40,17 +40,9 @@ section.scenes {
 }
 
 .scene__image {
-    height: 200px;
-    overflow: hidden;
     margin-bottom: 20px;
     position: relative;
     width: 100%;
-
-    img {
-        top: 0;
-        position: absolute;
-        width: 100%;
-    }
 }
 
 .scene__content {
@@ -107,11 +99,5 @@ section.scenes {
 
     p {
         padding: 0 25px 5px;
-    }
-}
-
-@media (min-width: 769px) {
-    .scene__image {
-        height: 500px;
     }
 }
